fix(pages): Added margin top on mobile in hero section

--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -24,6 +24,11 @@
 
 .hero {
   max-width: 600px;
+  margin-top: 3rem;
+
+  @media screen and (min-width: 768px) {
+    margin-top: 0;
+  }
 
   > span {
     font-size: 1.5rem;
